...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="visible">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_shots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/content_recycler_view_padding"
                tools:listitem="@layout/item_shot" />

        </android.support.v4.widget.SwipeRefreshLayout>
...
